--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.3",
     "moment": "^2.24.0",
     "react": "16.9.0",
     "react-native": "0.61.4",
