--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "moneyLover",
+  "name": "Smart Wallet Guide",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -16,6 +16,8 @@
     "react-native": "0.61.4",
     "react-native-action-button": "^2.8.5",
     "react-native-datepicker": "^1.7.2",
+    "react-native-elements": "^1.2.7",
+    "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-material-textfield": "^0.16.1",
