--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.3",
+    "@react-native-community/geolocation": "^2.0.2",
+    "d3-scale": "^3.2.0",
     "moment": "^2.24.0",
     "react": "16.9.0",
     "react-native": "0.61.4",
@@ -19,6 +21,7 @@
     "react-native-elements": "^1.2.7",
     "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "^1.5.0",
+    "react-native-maps": "^0.26.1",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-material-textfield": "^0.16.1",
     "react-native-modal": "^11.5.3",
